<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/widget_panel"
    android:padding="30sp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findHead"
        android:textStyle="bold"
        android:textSize="@dimen/head_text_size"
        android:textColor="@color/text_label_color"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findDescript"
        android:textSize="@dimen/second_head_text_size"
        android:textColor="@color/text_label_color"/>

    <EditText
        android:id="@+id/edOrderNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:hint="@string/findHint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textColor="@color/text_label_color"/>

    <TextView
        android:id="@+id/errMess_NumberFrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_order_DefaultError"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findButtonCap"
        android:layout_marginTop="10dp"
        android:id="@+id/btnFind"/>
</LinearLayout>