<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30sp"
    android:background="@color/white"
    app:layout_constraintHorizontal_bias="0.5">
    <TextView
        android:id="@+id/tvOrderNumHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNumOrder"
        android:textSize="@dimen/head_text_size"
        android:textStyle="bold"
        android:textColor="@color/text_label_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clarify_phone_text"
        android:textSize="@dimen/second_head_text_size"
        android:textColor="@color/text_label_color"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_num_hint"
        android:autofillHints=""
        android:id="@+id/edPhoneNumber"
        android:layout_marginTop="10dp"
        android:textColorHint="#757575"
        android:textColor="@color/text_label_color"/>

    <TextView
        android:id="@+id/errMess_PhoneFrg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_order_DefaultError"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findButtonCap"
        android:layout_marginTop="10dp"
        android:id="@+id/btnFindClarifyPhone"/>
</LinearLayout>