<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/widget_panel"
    android:padding="4dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/orderResultHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/order_result_header"
                android:textSize="@dimen/head_text_size"
                android:textStyle="bold"
                android:textColor="@color/text_label_color"/>

            <LinearLayout
                android:id="@+id/llState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/orderResultHeader"
                android:layout_marginTop="15dp"
                android:paddingEnd="8dp"
                android:paddingStart="0dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/state"
                    android:contentDescription="@string/statepng"/>

                <TextView
                    android:id="@+id/tvLabelOrderState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/order_state_header"
                    android:textSize="@dimen/second_head_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/text_label_color"/>

                <TextView
                    android:id="@+id/tvOrderState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/orderState"
                    android:layout_weight="0.6"
                    android:gravity="end"
                    android:textColor="@color/text_label_color"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDeliveryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llState"
                android:layout_marginTop="15dp"
                android:paddingEnd="8dp"
                android:paddingStart="0dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@drawable/delivery_date"
                    android:contentDescription="@string/delivdatepng"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/delivery_plan_date_header"
                    android:textSize="@dimen/second_head_text_size"
                    android:textStyle="bold"
                    android:textColor="@color/text_label_color"/>
                <TextView
                    android:id="@+id/tvDeliveryDate"
                    android:text="@string/deliveryDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_weight="0.6"
                    android:textColor="@color/text_label_color"/>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clPS_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/llDeliveryDate"
                app:layout_constraintLeft_toLeftOf="parent">
                <LinearLayout
                    android:id="@+id/llAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="15dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="0dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:src="@drawable/address"
                        android:contentDescription="@string/address_png"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/address_header"
                        android:textSize="@dimen/second_head_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/text_label_color"/>
                    <TextView
                        android:id="@+id/tvAddress"
                        android:text="@string/addressDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_weight="0.8"
                        android:textColor="@color/text_label_color"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llPaymentMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llAddress"
                    android:layout_marginTop="15dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:src="@drawable/payment_mode"
                        android:contentDescription="@string/payment_png"/>

                    <TextView
                        android:id="@+id/tvPaymentMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment_mode"
                        android:textSize="@dimen/second_head_text_size"
                        android:textStyle="bold"
                        android:textColor="@color/text_label_color"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llWorkMode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/llPaymentMode"
                    android:layout_marginTop="15dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="0dp">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:src="@drawable/work_mode"
                        android:contentDescription="@string/work_mode_png"/>

                    <TextView
                        android:id="@+id/tvWorkDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workDays"
                        android:textSize="@dimen/second_head_text_size"
                        android:layout_weight="0.55"
                        android:textColor="@color/text_label_color"/>

                    <TextView
                        android:id="@+id/tvWorkHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/workHours"
                        android:textSize="@dimen/second_head_text_size"
                        android:layout_weight="0.45"
                        android:gravity="end"
                        android:textColor="@color/text_label_color"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>